Add permanent work-in-progress notice

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+    <!-- Work-in-progress notice banner -->
+    <div class="wip-notice">
+        <div class="wip-notice-content">
+            <span class="material-icons wip-icon">construction</span>
+            <div>
+                <strong>Work-in-Progress Website</strong>
+                <p>This is a placeholder for the upcoming ChavrutAI platform. <a href="https://www.ezrabrand.com/p/pt2-chavrutai-web-app-in-progress" target="_blank" rel="noopener noreferrer">Find out more about this project here &rarr;</a></p>
+            </div>
+        </div>
+    </div>
+
     <header class="header">
         <div class="header-container">
             <div class="logo-container">
