--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-info">
-                <p>ChavrutAI - Making the Talmud more accessible for contemporary study | Data provided by Sefaria | Open-source project</p>
+                <p>ChavrutAI - Making the Talmud more accessible for contemporary study | Uses data from Sefaria (not affiliated) | Open-source project</p>
             </div>
             <div class="footer-links">
                 <a href="#" class="footer-link">About</a>
